# wl_robot

qr_wl/: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Jenkinsfile  QUICK_START.md  README.md  VERSION-SWITCH-README.md  VERSION_MANAGEMENT.md  build.sh  build_docker.sh  claude.md  compile_commands.json  customConfig.db  deploy_package_qr.sh  docker.sh  release.sh  setup_environment.sh  start.sh  switch-version.sh  sync.py
qr_wl/app/: CMakeLists.txt  README.md
qr_wl/app/config/: CMakeLists.txt  devArmParam.cpp  devArmParam.hpp  devHumanParam.cpp  devHumanParam.hpp  devQrParam.cpp  devQrParam.hpp  deviceParam.cpp  deviceParam.hpp  deviceType.hpp  git_info.hpp.in
qr_wl/app/config/device/: config_base.hpp
qr_wl/app/driver/: CMakeLists.txt  gamepad.cpp  gamepad.hpp  gripper.cpp  gripper.hpp  imuDrv.cpp  imuDrv.hpp  offlineVoiceModule.cpp  offlineVoiceModule.hpp  realsense.cpp  realsense.hpp
qr_wl/app/driver/canSensor/: CMakeLists.txt  canBridge.cpp  canBridge.hpp  canDeal.cpp  canDeal.hpp  canProtocol.cpp  canProtocol.hpp  sensorType.hpp
qr_wl/app/driver/hardware/: CMakeLists.txt  serialPort.cpp  serialPort.hpp  uart.cpp  uart.hpp
qr_wl/app/motion/: CMakeLists.txt  driver.hpp
qr_wl/app/motion/armMotor/: CMakeLists.txt  armDevEcat.cpp  armDevEcat.hpp  armMotor.cpp  armMotor.hpp  armMotorGazebo.cpp  armMotorGazebo.hpp  armMotorMit.cpp  armMotorMit.hpp  ecatBase.cpp  ecatBase.hpp  ecatIO.cpp  ecatIO.hpp  ecatMotor.cpp  ecatMotor.hpp
qr_wl/app/motion/hardware/: CMakeLists.txt  spi.cpp  spi.hpp  spi2can.cpp  spi2can.hpp  spi2canV2.cpp  spi2canV2.hpp  spi2canV3.cpp  spi2canV3.hpp
qr_wl/app/motion/mit/: CMakeLists.txt  mitMotorType.hpp  transMotorMit.cpp  transMotorMit.hpp
qr_wl/app/motion/qrMotor/: CMakeLists.txt  legWheelMotorMit.cpp  legWheelMotorMit.hpp  legWheelMotorMitV3.cpp  legWheelMotorMitV3.hpp  motorMitV3.cpp  motorMitV3.hpp  qrMotor.hpp  qrMotorGazebo.cpp  qrMotorGazebo.hpp  qrMotorMit.cpp  qrMotorMit.hpp  qrMotorMitV3.cpp  qrMotorMitV3.hpp  qrMotorType.hpp
qr_wl/app/network/: CMakeLists.txt  miniServer.cpp  miniServer.hpp  protocol.cpp  protocol.hpp  sdkProtocolServer.cpp  sdkProtocolServer.hpp
qr_wl/app/network/common/: CMakeLists.txt  netMsg.hpp  netType.hpp  nettools.cpp
qr_wl/app/network/server/: CMakeLists.txt  eventloop.cpp  eventloop.hpp  multicast.cpp  multicast.hpp  tcpServer.cpp  tcpServer.hpp  udpServer.cpp  udpServer.hpp
qr_wl/app/robot/: CMakeLists.txt  robotState.cpp  robotState.hpp
qr_wl/app/robot/customParam/: deviceCustomParam.cpp  deviceCustomParam.hpp
qr_wl/app/robot/media/: mediaConfig.cpp  mediaConfig.hpp  pcmDrv.cpp  pcmDrv.hpp  robotMedia.cpp  robotMedia.hpp  wavPlay.cpp  wavPlay.hpp
qr_wl/app/test/: CMakeLists.txt  main.cpp
qr_wl/app/test/config/: TestDeviceParam.cpp
qr_wl/app/test/driver/: TestCan.cpp
qr_wl/app/test/motor/: Test_qrMotor.cpp
qr_wl/app/user/: CMakeLists.txt
qr_wl/app/user/userArm/: CMakeLists.txt  armDebugServer.cpp  armDebugServer.hpp  armKey.cpp  armKey.hpp  armSdk.cpp  armSdk.hpp  userArmNode.cpp  userArmNode.hpp
qr_wl/app/user/userDevice/: CMakeLists.txt  README.md
qr_wl/app/user/userQuad/: CMakeLists.txt  README.md  quadCmd.cpp  quadCmd.hpp  quadDataChange.cpp  quadDataChange.hpp  quadDebugServer.cpp  quadDebugServer.hpp  quadKey.cpp  quadKey.hpp  quadSdk.cpp  quadSdk.hpp  quadWeb.cpp  quadWeb.hpp  userQuadNode.cpp  userQuadNode.hpp
qr_wl/baseline/: CMakeLists.txt  PeriodicTask.cpp  SoftTimer.cpp  cppSqlite.cpp  debugTools.cpp  msgCenter.cpp  paramCtrl.cpp  robotConfig.cpp  robotLog.cpp
qr_wl/baseline/pub/: baseline.hpp
qr_wl/baseline/pub/impl/: PeriodicTask.h  SoftTimer.hpp  appType.hpp  commTools.hpp  cppSqlite.hpp  cppType.hpp  debugTools.hpp  msgCenter.hpp  msgCenterImpl.hpp  msgChannel.hpp  msgRpc.hpp  msgType.hpp  paramCtrl.hpp  robotConfig.hpp  robotLog.hpp  robotType.hpp  singleton.hpp  timerTools.hpp
qr_wl/baseline/test/: CMakeLists.txt
qr_wl/config/: 00-base.toml  arm-gazebo.toml  arm-mit.toml  human-mit.toml  index.html  qr-gazebo-mz.toml  qr-gazebo.toml  qr-middleV3.toml  qr-middleV4.toml
qr_wl/control/: CMakeLists.txt
qr_wl/control/arm/: CMakeLists.txt  README.md  apiArmCtrl.cpp  armNode.cpp  armNode.hpp
qr_wl/control/arm/cmdManager/: CMakeLists.txt  cmdArm.cpp  cmdArm.hpp
qr_wl/control/arm/config/: CMakeLists.txt  armParam.cpp  armParam.hpp
qr_wl/control/arm/core/: CMakeLists.txt  armCommon.cpp  armCommon.hpp  armCore.cpp  armCore.hpp  armCore6.cpp  armCore6.hpp  (+5 more)
qr_wl/control/base/: CMakeLists.txt  ctrlBase.cpp  ctrlBase.hpp  imuData.hpp  mathTools.cpp  mathTools.hpp
qr_wl/control/quadruped/: CMakeLists.txt  README.md  controller.cpp  ctrlNode.cpp  ctrlNode.hpp
qr_wl/docs/20251126/: CHANGELOG.md  README.md  data-dictionary.md  exception-handling.md  style-guide.md  system-architecture.md
qr_wl/docs/ci-cd/: jenkins-setup.md  jenkins-troubleshooting.md  jenkins-usage.md
qr_wl/iiri-qr/: DEPLOY.md  README.md  VERSION.txt  arm-ga701.toml  arm-iris.toml  arm-qa01.toml  deploy_qr_service.sh  human-gazebo.toml  install.sh  qr-gazebo-sz-w.toml  qr-gazebo-sz.toml  qr-linkV2-3-w.toml  qr-linkV2-3.toml  qr-middle.toml  qr_start.sh  qr_stop.sh  robotrun.py
qr_wl/jenkins/: README.md  create-jenkins-job.sh  job-config.xml  trigger_build.sh  watch_latest_build.sh
qr_wl/onnx_model/sz_wheel/: 2025-03-01-19:22:45-1.onnx  2025-03-03-16:07:43-99.onnx  2025-03-03-16:36:50-99.onnx  2025-03-03-23:03:39-5k.onnx  2025-03-04-00:15:30-99.onnx  2025-03-04-09:27:49-10k.onnx  2025-03-04-09:28:03-10k.onnx  2025-03-04-09:30:01-10k.onnx  2025-03-04-19:21:42-1.onnx  2025-03-04-20:51:08-1.onnx  2025-03-05-11:31:55-5k.onnx  2025-03-05-16:39:55-1.onnx  2025-03-06-18:22:29-1.onnx  2025-03-06-22:29:29-1.onnx  2025-04-30-16:29:55-1.onnx  2025-06-16-15:01:45-99.onnx  2025-06-20-16:35:30-2.onnx  2025-06-23-10:06:19-3.onnx
qr_wl/project/: CMakeLists.txt
qr_wl/project/real/: CMakeLists.txt  main.cpp
qr_wl/project/ros1/: .gitignore
qr_wl/script/: afterBuild.py  build.sh  env.sh  fix_dependencies.sh  prevBuild.py  server.json  start.sh
qr_wl/script/autorun/: qr_start.sh
(+850 files in other folders)
